--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-enhance-v2",
-  "version": "0.8.5",
+  "version": "0.9.0",
   "description": "make old apollo better",
   "main": "src/main.js",
   "directories": {
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/xyz327/old-apollo-portal-enhance#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
-    "rollup": "^3.3.0"
+    "rollup": "^3.3.0",
+    "rollup-plugin-string": "^3.0.0"
   },
   "dependencies": {
     "jquery": "^3.6.1",
