--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "apollo-enhance",
-  "version": "0.9.3",
+  "name": "apollo-enhance-v2",
+  "version": "0.9.2",
   "description": "make old apollo better",
   "main": "src/main.js",
   "directories": {
